# Harbinger

./: .dockerignore  .env.example  .gitignore  .mockhunterignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HEARTBEAT.md  IDENTITY.md  PRODUCTION_PLAN.md  PROJECT_COMPLETION.md  QUICKSTART.md  README.md  SOUL.md  docker-compose.yml  drizzle.config.js  eslint.config.js  git-wizard.sh  harbinger  jsconfig.json  next.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  setup.sh  test_login.py
.github/: dependabot.yml  (+1 more)
prowlrbot-engine/: Dockerfile  alembic.ini  pyproject.toml
prowlrbot-engine/cli/: client.py  ingest.py  main.py  train.py
prowlrbot-engine/migrations/: env.py
prowlrbot-engine/src/: auth.py  cli_onboard.py  config.py  db.py  license.py  main.py
prowlrbot-engine/tests/: conftest.py  test_agent_factory.py  test_auth.py  test_barriers.py  test_channels.py  test_chunker.py  test_community.py  test_competitive.py  test_delegation.py  test_docker_client.py  test_e2e_pipeline.py  test_graph_rag.py  test_hardening.py  test_healing.py  test_health.py  test_hub.py  test_ingest.py  test_integration_mission.py  test_killswitch.py  test_knowledge_sources.py  test_learning.py  test_license.py  test_llm_adapter.py  test_memory.py  test_monitor.py  test_nuclei_ide.py  test_onboard.py  test_performer.py  test_planner.py  test_registry.py  test_safety.py  test_scheduler.py  test_search_engines.py  test_stream.py  test_templates.py  test_terminal_tool.py  test_user_tools.py  test_warroom.py  test_workflows.py
(+802 files in other folders)
